tests/rosetta/out/Zig/15-puzzle-game.error
zig build: exit status 1
/tmp/15-puzzle-game.zig:7:66: error: expected expression, found 'invalid bytes'
/tmp/15-puzzle-game.zig:7:67: note: invalid byte: '\n'
